# deep-steps-plugin

./: .gitignore  CMakeLists.txt  CMakeListsEXAMPLE.txt  README.md  binaryData.csv
assets/fonts/: README.md
assets/images/: README.md
src/: AudioAnalyzer.cpp  AudioAnalyzer.h  Autoencoder.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  GrooveAE.h  GrooveNN.h  LatentXYPad.h  ModelTrainerThread.cpp  ModelTrainerThread.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RNN.h
